--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.0",
+    "axios": "^1.6.1",
+    "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "18.2.37",
     "eslint": "^8",
     "eslint-config-next": "14.0.1"
   }
