--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "18.2.37",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "sass": "^1.69.5"
   }
 }
